style: fixed invalid justify-content, merged duplicate selectors, collapsed background shorthand

--- a/src/style.css
+++ b/src/style.css
@@ -1,53 +1,49 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body{
-    background: url("./img/novo-bg.jpg");
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: cover;
+body {
+    background: url("./img/novo-bg.jpg") no-repeat top / cover;
     width: 100vw;
     max-width: 1360px;
     height: 220vh;
     transition: all 1.5s ease-in-out;
-    animation-duration: 2s;
     overflow-y: hidden;
 }
 
-#container1{
+#container1 {
     display: flex;
     justify-content: center;
     padding-top: 2rem;
     height: 115vh;
-    
 }
 
-#menu{
+#menu {
     display: flex;
     flex-direction: column;
     gap: 10rem;
     width: 40vw;
 }
 
-#container2{
+#container2 {
     display: flex;
     justify-content: center;
     gap: 4rem;
-    
 }
 
-#player{
+#player,
+#computer {
     display: flex;
     flex-direction: column;
-    justify-content: space-center;
+    justify-content: space-between;
     align-items: center;
     width: 15rem;
+    margin-top: 2.5rem;
 }
 
-#cards{
+#cards {
     width: 20rem;
     height: 24rem;
     display: flex;
@@ -55,46 +51,34 @@ body{
     align-items: flex-start;
 }
 
-#computer{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-center;
-    align-items: center;
-    width: 15rem;
-}
-
-.characters{
-    margin-top: 2.5rem;
-}
-
 .hearts {
     display: flex;
     gap: 2px;
 }
 
-.spriteOfCharacters img{
+.spriteOfCharacters img {
     width: 7rem;
     height: 6rem;
     margin: 2rem;
 }
 
-#chooses{
+#chooses {
     display: flex;
     justify-content: space-between;
     width: 18rem;
 }
 
-#chooses img{
+#chooses img {
     width: 3.5rem;
     height: 3.5rem;
     transition: all 0.3s ease-out;
 }
 
-#chooses #paper{
+#chooses #paper {
     margin-top: 2rem;
 }
 
-#chooses img:hover{
+#chooses img:hover {
     width: 6rem;
     height: 6rem;
     cursor: pointer;
@@ -105,22 +89,21 @@ body{
     height: 12rem;
 }
 
-#playerCardChoose{
+#playerCardChoose {
     position: relative;
     top: 12rem;
-    bottom: 0rem;
     opacity: 0%;
     transition: all 0.6s ease-out;
 }
 
-#computerCardChoose{
+#computerCardChoose {
     position: relative;
     bottom: 12rem;
     opacity: 0%;
     transition: all 0.6s ease-out;
 }
 
-#winner{
+#winner {
     display: flex;
     height: 45vh;
     flex-direction: column;
@@ -131,8 +114,3 @@ body{
     position: relative;
     top: 10rem;
 }
-
-
-
-
-
